tests/resources/invalid/type/control_flow/if_not_boolean.mamba
if 0..10 then print "hello world"
